<resources>
    <string name="app_name">Media Player</string>
    <string name="menu_item_audio">Audio</string>
    <string name="menu_item_favourite">Favourite</string>
    <string name="menu_item_clock">Clock</string>
    <string name="menu_item_own">Own</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_rate">Rate</string>
    <string name="menu_item_other_apps">Other apps</string>
    <string name="menu_item_bonus_apps">Bonus apps</string>
    <string name="menu_item_change">Change</string>
    <string name="navigation_view_open">Open navigation drawer</string>
    <string name="navigation_view_close">Close navigation drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>