<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_audio"
        android:icon="@drawable/ic_audio"
        android:title="@string/menu_item_audio"/>
    <item
        android:id="@+id/item_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/menu_item_favourite"/>

    <item android:title="Remind">
        <menu>
            <item
                android:id="@+id/item_clock"
                android:icon="@drawable/ic_clock"
                android:title="@string/menu_item_clock"/>
        </menu>
    </item>

    <item android:title="Playlist">
        <menu>
            <item
                android:id="@+id/item_own"
                android:icon="@drawable/ic_own"
                android:title="@string/menu_item_own"/>
        </menu>
    </item>

    <item android:title="Country">
        <menu>
            <item
                android:id="@+id/item_change"
                android:icon="@drawable/ic_change"
                android:title="@string/menu_item_change"/>
        </menu>
    </item>

    <item android:title="Information">
        <menu>
            <item
                android:id="@+id/item_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_item_about"/>
            <item
                android:id="@+id/item_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_item_share"/>
            <item
                android:id="@+id/item_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/menu_item_rate"/>
            <item
                android:id="@+id/item_other_apps"
                android:icon="@drawable/ic_other_apps"
                android:title="@string/menu_item_other_apps"/>
            <item
                android:id="@+id/item_bonus_apps"
                android:icon="@drawable/ic_bonus_apps"
                android:title="@string/menu_item_bonus_apps"/>
        </menu>
    </item>

</menu>